		* Made not finding GeoIP non-fatal.
		* Check if --enable-geoip-static can be fulfilled.
		* Fixed loading of zipped ipfilter files. Thanks to CtrlAltDel
		  for the investigation of the problem.
		* Fixed alc progress bar for files >4GB.

	LittleAbacus:
		* Support multiple selections on CSearchListCtrl::OnMarkAsKnown().

	Skolnick:
		* Fix alc and alcc to work with files bigger than 4GB

	Wuischke:
		* Add checks to cas to prevent segfaults
		* Fix wxCas save file dialog for file types
		* Fix a buffer overflow error in cas

--------------------------------------------------------------------------------

Version 2.2.2 - The "Similarity." version
----------
2008-08-08

	bomj:
		* Patch for alcc to improve usability

	Gaznevada:
		* implement getopt_long in cas for systems which lack it

	GonoszTopi:
		* Fixing denoiser
		* include <sys/types.h> before <regex.h> as by POSIX
		* Fix noinline in crypto for some systems
		* Fix display of ccache option
		* Add sources from search results for new downloads
		* Use output of gdlib-config for gd.h detection
		* Solaris mntent fix
		* wxMSW fix
		* Fix NULL pointer dereference
		* Fix for configure not using --with-geoip value in library check
		* Added pkg.m4 from pkg-config-0.23
		* Ported Kademlia Protocol Version 8 from eMule0.49b.
			- Kad now ignores multiple IDs pointing to one IP in
			  routing request answers
			- When calculating the total user count, Kad now uses
			  (if available) the real number of firewalled clients
			  for the calculation instead a fixed value. This will
			  take more effect when 0.49+ nodes become common
			- Kad no longer tries to add UDP firewalled (and therefore
			  mostly unreachable) nodes into its routing table,
			  reducing overhead and increasing reliability [Idea: Netfinity]
			- Optimized the Kad packettracking code to only track
			  packets which we check later, to save resources
			- Fixed a bug which let Kad sometimes assume a Kad2